@@ -1713,15 +1713,17 @@ type 'te gen_parsable =
 
 type parsable = token gen_parsable;;
 
+let fstream_of_stream ts =
+  Fstream.from
+    (fun _ ->
+       match Stream.peek ts with
+         None -> None
+       | x -> Stream.junk ts; x)
+;;
+
 let parsable g cs =
   let (ts, lf) = g.glexer.Plexing.tok_func cs in
-  let fts =
-    Fstream.from
-      (fun _ ->
-         match Stream.peek ts with
-           None -> None
-         | x -> Stream.junk ts; x)
-  in
+  let fts = fstream_of_stream ts in
   {pa_chr_strm = cs; pa_tok_strm = ts; pa_tok_fstrm = fts; pa_loc_func = lf}
 ;;
 
@@ -1941,7 +1943,13 @@ module Entry =
       parse_parsable_all entry parsable
     ;;
     let parse_token (entry : 'a e) ts : 'a =
-      Obj.magic (entry.estart 0 ts : Obj.t)
+      match entry.egram.galgo with
+        DefaultAlgorithm ->
+          if !backtrack_parse then
+            failwith "not impl Entry.parse_token default backtrack"
+          else Obj.magic (entry.estart 0 ts : Obj.t)
+      | Predictive -> Obj.magic (entry.estart 0 ts : Obj.t)
+      | Backtracking -> failwith "not impl Entry.parse_token backtrack"
     ;;
     let name e = e.ename;;
     let of_parser g n (p : te Stream.t -> 'a) : 'a e =
@@ -2058,13 +2066,7 @@ module GMake (L : GLexerType) =
     let gram = gcreate L.lexer;;
     let parsable cs =
       let (ts, lf) = L.lexer.Plexing.tok_func cs in
-      let fts =
-        Fstream.from
-          (fun _ ->
-             match Stream.peek ts with
-               None -> None
-             | x -> Stream.junk ts; x)
-      in
+      let fts = fstream_of_stream ts in
       {pa_chr_strm = cs; pa_tok_strm = ts; pa_tok_fstrm = fts;
        pa_loc_func = lf}
     ;;
@@ -2092,7 +2094,17 @@ module GMake (L : GLexerType) =
           | Backtracking -> Obj.magic (bparse_parsable e p : Obj.t)
         ;;
         let parse_token (e : 'a e) ts : 'a =
-          Obj.magic (e.estart 0 ts : Obj.t)
+          match e.egram.galgo with
+            DefaultAlgorithm ->
+              if !backtrack_parse then
+                let fts = fstream_of_stream ts in
+                match e.bstart 0 fts with
+                  Some (a, _, _) -> Obj.magic a
+                | None -> raise Stream.Failure
+              else Obj.magic (e.estart 0 ts : Obj.t)
+          | Predictive -> Obj.magic (e.estart 0 ts : Obj.t)
+          | Backtracking ->
+              failwith "not impl gram Entry.parse_token backtrack"
         ;;
         let name e = e.ename;;
         let of_parser n (p : te Stream.t -> 'a) : 'a e =
