@@ -1,6 +1,7 @@
 Camlp5 Version 6.18:
 --------------------
 
+* [31 May 17] Fixed bug: Entry.parse_token did not accept backtrack parsing.
 * [31 May 17] Fixed ocaml parsing for case of record {foo () with ...}.
 * [31 May 17] Fixed bug backtrack parsing for function Entry.of_parser.
 * [25 May 17] Improved grammar parsing: now able to treat
